tests/fixtures/syntax/valid/single_line_assertion_block.repor
case "single line assertion" {
  $ true
  assert { exit 0 }
}
