tests/fixtures/syntax/invalid/single_line_assert_heredoc_stdout_text_equals.repor
case "single line assert heredoc stdout text_equals" {
  $ true
  assert { stdout text_equals ```
  hello
  ``` }
}
